# Racket-Team

./: README.md  my_first  my_first_file
actions_quiz/: CMakeLists.txt  package.xml
actions_quiz/action/: ArdroneAction.action
actions_quiz/src/: action_server.py
service_quiz/: CMakeLists.txt
service_quiz/launch/: client_start.launch  server_start.launch
service_quiz/src/: service_client.py  service_server.py
service_quiz2/: package.xml
service_quiz2/src/: service_client.py  service_server.py
service_quiz2/srv/: CustomMSG.srv
topics_quiz/: package.xml
topics_quiz/launch/: obs.launch
topics_quiz/src/: obstacol.py  obstacol_publisher.py  scan_topic_subscriber.py
